// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete> Props should render correctly when the dropdown is closed 1`] = `
<div
  className="lumx-autocomplete"
>
  <TextField
    inputRef={
      Object {
        "current": null,
      }
    }
    onChange={[MockFunction]}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    value=""
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    isOpen={false}
    shouldFocusOnOpen={false}
  >
    <List
      isClickable={true}
    >
      <ListItem
        key="losangeles"
        size="tiny"
      >
        <div>
          Los Angeles
        </div>
      </ListItem>
      <ListItem
        key="sanfrancisco"
        size="tiny"
      >
        <div>
          San Francisco
        </div>
      </ListItem>
      <ListItem
        key="paris"
        size="tiny"
      >
        <div>
          Paris
        </div>
      </ListItem>
      <ListItem
        key="montpellier"
        size="tiny"
      >
        <div>
          Montpellier
        </div>
      </ListItem>
      <ListItem
        key="bordeaux"
        size="tiny"
      >
        <div>
          Bordeaux
        </div>
      </ListItem>
      <ListItem
        key="toulouse"
        size="tiny"
      >
        <div>
          Toulouse
        </div>
      </ListItem>
      <ListItem
        key="lyon"
        size="tiny"
      >
        <div>
          Lyon
        </div>
      </ListItem>
      <ListItem
        key="montevideo"
        size="tiny"
      >
        <div>
          Montevideo
        </div>
      </ListItem>
    </List>
  </Dropdown>
</div>
`;

exports[`<Autocomplete> Snapshots and structure should render correctly 1`] = `
<div
  className="lumx-autocomplete"
>
  <TextField
    inputRef={
      Object {
        "current": null,
      }
    }
    onChange={[MockFunction]}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    value=""
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    isOpen={true}
    shouldFocusOnOpen={false}
  >
    <List
      isClickable={true}
    >
      <ListItem
        key="losangeles"
        size="tiny"
      >
        <div>
          Los Angeles
        </div>
      </ListItem>
      <ListItem
        key="sanfrancisco"
        size="tiny"
      >
        <div>
          San Francisco
        </div>
      </ListItem>
      <ListItem
        key="paris"
        size="tiny"
      >
        <div>
          Paris
        </div>
      </ListItem>
      <ListItem
        key="montpellier"
        size="tiny"
      >
        <div>
          Montpellier
        </div>
      </ListItem>
      <ListItem
        key="bordeaux"
        size="tiny"
      >
        <div>
          Bordeaux
        </div>
      </ListItem>
      <ListItem
        key="toulouse"
        size="tiny"
      >
        <div>
          Toulouse
        </div>
      </ListItem>
      <ListItem
        key="lyon"
        size="tiny"
      >
        <div>
          Lyon
        </div>
      </ListItem>
      <ListItem
        key="montevideo"
        size="tiny"
      >
        <div>
          Montevideo
        </div>
      </ListItem>
    </List>
  </Dropdown>
</div>
`;
